--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,13 @@
+  {% load meta %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" {% meta_namespaces_schemaorg %}>
+<head {% meta_namespaces %}>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Atlas Competition{% endblock %}</title>
+
+    {% include "meta/meta.html" %}
+    <title>{% block title %}Atlas Competition{% endblock %}
+</title>
     {% load static %}
     {% load django_bootstrap5 %}
 
