--- a/templates/competitions/manage_competition.html
+++ b/templates/competitions/manage_competition.html
@@ -201,7 +201,7 @@
                    class="btn btn-outline-primary btn-sm">
                     <i class="bi bi-check2-square"></i> Check-in Athletes
                 </a>
-                <a href="{% url 'competitions:competition_detail' competition.pk %}"
+                <a href="{% url 'competitions:competition_detail' competition.slug %}"
                    class="btn btn-outline-primary btn-sm">
                     <i class="bi bi-eye-fill"></i> View Details
                 </a>
