--- a/templates/competitions/organizer_competitions.html
+++ b/templates/competitions/organizer_competitions.html
@@ -52,7 +52,7 @@
                                                 </p>
                                             </div>
                                             <div class="card-footer bg-light d-flex justify-content-between align-items-center">
-                                                <a href="{% url 'competitions:competition_detail' competition.pk %}"
+                                                <a href="{% url 'competitions:competition_detail' competition.slug %}"
                                                    class="btn btn-outline-primary btn-sm">
                                                     <i class="bi bi-eye-fill"></i> View Details
                                                 </a>
