--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -5,7 +5,7 @@
 {% load weight_filter %}
 {% block extra_head %}
 <script type="application/ld+json">
-{{ meta.schema|json_script:"structured-data" }}
+{{ meta.schema|safe }}
 
 </script>
 
