--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -4,10 +4,8 @@
 {% load dictkey_filter %}
 {% load weight_filter %}
 {% block extra_head %}
-<script type="application/ld+json">
-{{ meta.schema|safe }}
+{{ meta.schema|json_script:"structured-data" }}
 
-</script>
 
 {% endblock %}
 {% block title %}{{ competition.name }} | Atlas Competition{% endblock %}
