--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -4,7 +4,10 @@
 {% load dictkey_filter %}
 {% load weight_filter %}
 {% block extra_head %}
+<script type="application/ld+json">
 {{ meta.schema|json_script:"structured-data" }}
+</script>
+
 
 
 {% endblock %}
