added canonical domain

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     {% include "meta/meta.html" %}
     <title>{% block title %}Atlas Competition{% endblock %}
 </title>
+<link rel="canonical" href="https://atlascompetition.com{{ request.path }}">
     {% load static %}
     {% load django_bootstrap5 %}
 
