--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% include "meta/meta.html" %}
-    <title>{% block title %}Atlas Competition{% endblock %}
+    <title>{% block title %}Atlas Competition - Strongman Competition Platform{% endblock %}
 </title>
 <link rel="canonical" href="https://atlascompetition.com{{ request.path }}">
     {% load static %}
