--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% include "meta/meta.html" %}
-    <title>{% block title %}Atlas Competition - Strongman Competition Platform{% endblock %}
-</title>
+    <title>{% block title %}Atlas Competition - Strongman Competition Platform{% endblock %}</title>
+
 <link rel="canonical" href="https://atlascompetition.com{{ request.path }}">
     {% load static %}
     {% load django_bootstrap5 %}
@@ -15,7 +15,7 @@
     <!-- Bootstrap and Font Awesome -->
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.4.11/jquery.autocomplete.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -23,16 +23,21 @@
           crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin" defer></script>
     <script src="https://cdn.tiny.cloud/1/wt5rkmgimgwn43tf9f6glmxs7ybeega6ebcz7emqmxb8gmth/tinymce/7/tinymce.min.js"
-            referrerpolicy="origin"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+            referrerpolicy="origin" defer></script>
+
     <!-- Default CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'chat/style.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" media="all" onload="this.media='all'">
+<noscript>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap">
+</noscript>
+
     {% block extra_head %}{% endblock %}
 
     <style>
@@ -321,5 +326,7 @@
 <!-- Customizable Scripts -->
 {% block extra_scripts %}
 {% endblock %}
+<script src="https://unpkg.com/htmx.org@1.9.2"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
